Fix comment content overflow

--- a/src/components/CommentThread/CommentThread.scss
+++ b/src/components/CommentThread/CommentThread.scss
@@ -32,6 +32,7 @@
 
   &__comment {
     flex-grow: 1;
+    min-width: 0;
     padding: 5px 0 5px 10px;
   }
 
